# Kaggle_Capstone_Water_Plants_Project

./: .gitignore  README.md
backend/: agents.py  main.py
backend/static/: index.html
backend/static/assets/: index-1Dv83VaM.js  index-B5YWEggY.js
docs/: Skills_doku.md  conversation_log_10.md  conversation_log_11.md  conversation_log_13.md  conversation_log_3.md  conversation_log_5.md  conversation_log_6.md  conversation_log_7.md  conversation_log_9.md
floracast-agent/: README.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
floracast-agent/app/: agent.py
floracast-agent/app/app_utils/: telemetry.py  typing.py
floracast-agent/deployment/terraform/single-project/: variables.tf
floracast-agent/deployment/terraform/single-project/vars/: env.tfvars
frontend/: copy-build.cjs  index.html  package.json
frontend/src/: main.js  style.css
mcp_server/: weather_mcp.py
prompts/: deploy_frontend.md  fix_moisture.md  frontend_prompt.md
skills/botanical-watering-skill/: SKILL.md
skills/botanical-watering-skill/resources/: plant_database.json
skills/botanical-watering-skill/scripts/: moisture_calculator.py
skills/prompt-documentation-skill/: SKILL.md
skills/prompt-documentation-skill/references/: example_log.md
skills/safety-check-skill/: SKILL.md
submission_frontend/: Dockerfile  main.py  moisture_calculator.py  plant_database.json  pyproject.toml
submission_frontend/static/: index.html  style.css
submission_frontend/static/assets/: index-CCEkTGKt.css  index-D8KanY70.css  index-DWOET9sX.js
